--- a/style/homepage.css
+++ b/style/homepage.css
@@ -18,7 +18,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(/Webpage.png); 
+    background-image: url(../Webpage.png); 
 }
 .container{
    padding: 15px 15%;
@@ -124,7 +124,7 @@ nav ul li a:hover::after{
     height: auto;
     padding: 150px 0px;
     color: white;
-    background-image: url(/BG.png);
+    background-image: url(../BG.png);
     background-position-y: 20px;
 }
 .row{
@@ -200,7 +200,7 @@ nav ul li a:hover::after{
     height: auto;
     padding: 110px 0px;
     color: white;
-    background-image: url(/BG.png);
+    background-image: url(../BG.png);
     background-position-y: 20px;
 }
 
@@ -264,7 +264,7 @@ nav ul li a:hover::after{
     height: auto;
     padding: 110px 0px;
     color: white;
-    background-image: url(/BG.png);
+    background-image: url(../BG.png);
     background-position-y: 20px;
     background-repeat: repeat-y;
 }
@@ -331,7 +331,7 @@ nav ul li a:hover::after{
     height: auto;
     padding: 110px 0 0 0;
     color: white;
-    background-image: url(/BG.png);
+    background-image: url(../BG.png);
     background-position-y: 20px;
     background-repeat: repeat-y;
 }
@@ -441,7 +441,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 800px){
     #header{
-        background-image: url(/WebpagePhone.png);
+        background-image: url(../WebpagePhone.png);
         background-size: cover;
     }
     .header-text{
